[gd_scene load_steps=4 format=3 uid="uid://dn67xjb30xr03"]

[ext_resource type="Script" uid="uid://i32w0b4k70k" path="res://scenes/menus/main_menu.gd" id="1_wlpbi"]
[ext_resource type="Script" uid="uid://b0ss7tn7120vn" path="res://src/menus/SoundButton.gd" id="2_bqojv"]
[ext_resource type="AudioStream" uid="uid://bndrxqkpfsncu" path="res://assets/sound/ui click.wav" id="3_ldf1p"]

[node name="MainMenu" type="Container" node_paths=PackedStringArray("MusicSlider", "SFXSlider")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 56.375
offset_top = 16.805
offset_right = -1095.6249
offset_bottom = -631.19495
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wlpbi")
MusicSlider = NodePath("BoxContainer/music_slider")
SFXSlider = NodePath("BoxContainer2/sfx_slider")
vertical_shift = 19.61
separation = 22.165
metadata/_custom_type_script = "uid://dy6xy2lls6yxc"

[node name="Exit" type="Button" parent="."]
layout_mode = 2
text = "exit"
script = ExtResource("2_bqojv")
click_sound = ExtResource("3_ldf1p")
metadata/_custom_type_script = "uid://b0ss7tn7120vn"

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 2
vertical = true

[node name="music_sound" type="Label" parent="BoxContainer"]
layout_mode = 2
text = "music"

[node name="music_slider" type="HSlider" parent="BoxContainer"]
layout_mode = 2

[node name="BoxContainer2" type="BoxContainer" parent="."]
layout_mode = 2
vertical = true

[node name="sfx_sound" type="Label" parent="BoxContainer2"]
layout_mode = 2
text = "sfxx"

[node name="sfx_slider" type="HSlider" parent="BoxContainer2"]
layout_mode = 2

[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="drag_ended" from="BoxContainer/music_slider" to="." method="_on_music_slider_drag_ended"]
[connection signal="drag_ended" from="BoxContainer2/sfx_slider" to="." method="_on_sfx_slider_drag_ended"]
